--- a/app/src/main/res/layout/activity_topic_three.xml
+++ b/app/src/main/res/layout/activity_topic_three.xml
@@ -60,6 +60,16 @@
                 android:onClick="onRadioButtonClicked"
                 android:text="It depends on what you're looking at in the mirror." />
 
+            <TextView
+                android:id="@+id/answerone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="Answer"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"/>
+
         </RadioGroup>
 
 
@@ -100,6 +110,15 @@
                 android:layout_height="wrap_content"
                 android:onClick="onRadioButtonClicked"
                 android:text="Batman"/>
+
+            <TextView
+                android:id="@+id/answertwo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="Answer"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"/>
 
         </RadioGroup>
 
@@ -142,6 +161,15 @@
                 android:onClick="onRadioButtonClicked"
                 android:text="It is not possible to answer"/>
 
+            <TextView
+                android:id="@+id/answerthree"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="Answer"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"/>
+
         </RadioGroup>
 
 
@@ -182,6 +210,15 @@
                 android:layout_height="wrap_content"
                 android:onClick="onRadioButtonClicked"
                 android:text="More than 7"/>
+
+            <TextView
+                android:id="@+id/answerfour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="Answer"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"/>
 
         </RadioGroup>
 
@@ -224,6 +261,15 @@
                 android:onClick="onRadioButtonClicked"
                 android:text="3"/>
 
+            <TextView
+                android:id="@+id/answerfive"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="Answer"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"/>
+
         </RadioGroup>
 
 
@@ -248,16 +294,45 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="You scored: " />
+                android:text="You scored: "
+                android:textColor="@android:color/black" />
 
             <TextView
                 android:id="@+id/displayScore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
-                android:text="0" />
+                android:text="0"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:text="/5" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="viewAnswers"
+                android:text="@string/my_text"
+                android:textStyle="italic"
+                android:layout_marginLeft="10dp"
+                android:textSize="16sp"
+                android:textColor="@android:color/holo_blue_dark" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:text="Comment"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"/>
 
     </LinearLayout>
 
